# Defend-the-data

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  app  export_presets.cfg  extension.gdextension  extension.gdextension.uid  game.db  project.godot  temp_scanner_border_matte_on_gray.png.import  temp_scanner_border_matte_preview.png.import  temp_scanner_keyed_preview.png.import  temp_scanner_preview.png.import
APK_Version/: .apk  .apk.idsig
Acc_Src/: database.cpp  database.h  game.db  login_sim  main.cpp  test
Scenes/Enemies/: BotnetLV.tscn  RedVirus.tscn  TrojanHorse.tscn
Scenes/Gameplay/: Admin_Sandbox.tscn  Cutscene_Test_Game.tscn  Cutscene_Test_Game.tscn3461329397.tmp  DEMO_SCENE.tscn  Demo_Game.tscn  PresentationScene.tscn
Scenes/Menus/: LoginScene.tscn  MainMenu.tscn  RegisterScene.tscn
Scenes/Towers/: CyberGuardian.tscn  IDS_Scanner.tscn  LaserTurret.tscn
Scenes/UI/: AnnounceText.tscn  CutsceneDemoMenu.tscn  CutsceneSkipHud.tscn  CyberQuestionHud.tscn  DemoPresentationOverlay.tscn  GameControlsHud.tscn  PerformanceHud.tscn  Text_Cutscene.tscn  (+1 more)
assets/: BasicVirus.png.import  CPU_Arena.jpg.import  Cyber-Guardian_Idle1_atlas_30fps.png.import  CybersecurityMascot.png.import  VirusTest.jpg.import
cpp_extension/: auth.cpp  auth.h  auth_wrapper.cpp  auth_wrapper.h  main.cpp  register_types.cpp
scripts/: asset_cache.gd.uid  cyber_guardian_idle_sprite.gd
tools/: Cutscene.png.import  regenerate_tower_spriteframes.gd  regenerate_tower_spriteframes.gd.uid  regenerate_trojan_horse_spriteframes.gd  regenerate_trojan_horse_spriteframes.gd.uid
(+164 files in other folders)
